--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-html-parser": "^2.0.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
