--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
+    "babel-eslint": "^8.2.6",
     "bootstrap": "^4.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-html-parser": "^2.0.2",
     "react-scripts": "1.1.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "standard": {
+      "parser": "babel-eslint"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
