--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.54",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.1.2",
     "babel-preset-stage-0": "^6.24.1",
     "standard": {
       "parser": "babel-eslint"
